# ezi

./: CMakeLists.txt  LICENSE  README.md
src/: event_emitter.hpp  input.cpp  input.hpp
test/: test.cpp
